# aituber

./: .gitignore  README.md  adapter.py  memory_handler.py  pyproject.toml  requirements.txt  run_aituber.py  text_segmenter.py  tts.py
aituber/: __main__.py  cli.py
aituber/src/: __init__.py  aituber.py  broadcast.py  chat.py
aituber/src/agent/: dispatcher.py  executor.py  sound_player.py
aituber/src/agent/app/mahjong/: __init__.py  agent.py  run.py
aituber/src/agent/app/mahjong/trainer/: dataset.py  module.py  preprocess.py  train.py
aituber/src/agent/app/mahjong/utils/: gym.py
aituber/src/agent/tools/: __init__.py  ff14.py  mahjong.py  web_scraper.py
aituber/src/core/agent/: __init__.py  executor.py  tts.py
aituber/src/core/agent/tools/: chat.py  ff14.py  search.py
aituber/src/core/agent/utils/: __init__.py  destination_output_parser.py
aituber/src/core/chat/: __init__.py  agent.py  chatbot.py  openai_chatbot.py
aituber/src/core/memory/: __init__.py  memory_handler.py
aituber/src/network/: __init__.py  comment_handler.py  obs_handler.py
aituber/src/rag/: __init__.py  database.py  scraper.py  vectorize.py
aituber/src/rag/scraper/: __init__.py  ff14_scraper.py
